# ClippingFixNG

./: CMakeLists.txt  vcpkg.json
cmake/: plugintarget.cmake
